--- a/FoodTracker/Base.lproj/Main.storyboard
+++ b/FoodTracker/Base.lproj/Main.storyboard
@@ -23,8 +23,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bww-3A-pQH">
-                                <rect key="frame" x="16" y="50" width="343" height="438.5"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bww-3A-pQH">
+                                <rect key="frame" x="16" y="70" width="343" height="438.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f0g-oN-Rcu">
                                         <rect key="frame" x="128.5" y="0.0" width="86.5" height="20.5"/>
@@ -65,9 +65,8 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="bww-3A-pQH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="0T6-CM-kh0"/>
-                            <constraint firstItem="bww-3A-pQH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="86" id="IjX-x4-W8y"/>
-                            <constraint firstItem="bww-3A-pQH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="hvx-zW-psm"/>
                             <constraint firstAttribute="trailingMargin" secondItem="bww-3A-pQH" secondAttribute="trailing" id="o0U-em-mnT"/>
+                            <constraint firstItem="bww-3A-pQH" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="wuu-3Q-xMR"/>
                         </constraints>
                     </view>
                     <connections>
